# mlvm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Makefile.local  README.md  TODO  go.mod  license  makefile  readme.md
.arived/mlvm/Foundation/: Logger.h  Logging.cc  Logging.h  Macros.h  Status.cc  StatusOrTest.cc  Utilities.cc
.arived/mlvm/IR/: Function.h  Instruction.cc  Instruction.h
.arived/mlvm/Op/: Einsum.cc  Einsum.h
.arived/mlvm/Random/: CMakeLists.txt  Splittable.cc  Splittable.h
.arived/mlvm/Runtime/: CMakeLists.txt
.arxived/benchmarks/: Makefile  gemm.h  matmul.go
.arxived/c/: CMakeLists.txt  README.md
.arxived/c/doc/: Makefile
.arxived/compiler/: builder_builtin_fns.go
.arxived/parser/lexer/: lexer_test.go
.arxived/parser/parser/: parse_expr.go  parser.go  parser_test.go
.arxived/parser/tests/: expr_single_literal_test.go  (+1 more)
CMake/: MLVMHelpers.cmake
benchmarks/: Makefile  gemm.c  gemm.h  matmul.go
cmake/: MLVMHelpers.cmake
cmd/: helpers.h  main.cpp  main.go  model_xor.go  yacc.go
cmd/ast/: main.go
cmd/c/: main.c
cmd/compile/: main.cpp
cmd/compiler/: main.go
cmd/demo/: main.cc
cmd/mlvm/: main.c
cmd/mnist/: main.c  mnist.c  mnist.h
cmd/mnist_demo/: main.c  mnist.h
cmd/prng/: main.c
cmd/regression/: main.c
cmd/regression_demo/: main.c
cmd/test/: main.c  main.cc  test.h
cmd/vm/: main.c  main.go
cmd/vm_demo/: main.c
compiler/codegen/: codegen.go  codegen_test.go
compiler/ir/: instructions.go  ir.go  ir_test.go  types.go  types_test.go
doc/: 00-TODO.md  00-credits.md  000-TODO.md  001-variable_design.md  002-variable_design_alternative.md  003-variable_design_alternative_alternative.md  004-graph-as-ir.md  005-array-tensor-value-and-parameter.md  006-function-and-module.md  01-Tensor.tex  01-design.txt  01-tensor.tex  02-conv2d.tex  02-eager-design.txt  Makefile  changelog  design.tex  format.tex  input_design.md  layer_dag.md  loss_softmax_crossentropy.tex  rl.txt
doc/api/: book.toml
examples/: main.cpp  main.go
go/code/: code.go  code_test.go  constants.go  doc.go  instructions.go  object.go  object_test.go  opcode.go  opcode_test.go  program.go  program_test.go
go/compiler/: README.md  builder.go  builder_builtin_fns.go  builder_emitter.go  builder_expr.go  builder_stat.go  builtin_fns.go  codegen.go  codegen_test.go  compile.go  compile_test.go
go/ir/: ir.go  ir_test.go
go/object/: array.go  array_test.go  basic_types.go  builtin.go  doc.go  object.go  object_test.go  prng.go  prng_64.go  prng_64_impl.go  rng.go  shape.go  shape_test.go  tensor.go  tensor_test.go
go/syntax/: README.md
go/vm/: README.md  doc.go  errors.go  memory.go  memory_test.go  stack.go  stack_test.go  tensor_store.go  vm.go  vm_examples_test.go  vm_helper.go  vm_run.go  vm_run_test.go  vm_test.go
include/: vm.h
lib/lexer/: lexer.go  lexer_example_test.go  lexer_full_example_test.go  lexer_test.go
lib/token/: loc.go  loc_test.go  token.go  token_test.go
mach/mat/: binaryop.go  doc.go  matmul_test.go  reduce.go
mlvm/Array/: Array.cpp  Array.h  ArrayImpl.cpp  ArrayImpl.h  ArrayImplTest.cpp  ArrayLike.cpp  ArrayLike.h  ArrayTest.cpp  CMakeLists.txt  Data.cpp  Data.h  DataTest.cpp  Shape.cpp  Shape.h  ShapeLike.cpp  ShapeLike.h  ShapeLikeTest.cpp  ShapeTest.cpp
mlvm/Computation/: CMakeLists.txt  Computation.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  InstructionTest.cpp  OpCode.h  Program.h  Tensor.h  TensorLike.cpp  TensorLike.h  TensorLikeTest.cpp  Tuple.cpp  Tuple.h
mlvm/Foundation/: CMakeLists.txt  Foundation.h  Logger.cc  Logger.h  Logging.cc  Logging.h  Macros.h  Status.cc  Status.cpp  Status.h  StatusOr.cpp  StatusOr.h  StatusOrTest.cc  StatusOrTest.cpp  StatusTest.cc  StatusTest.cpp  Utilities.h
mlvm/IR/: CMakeLists.txt  Function.cc  Function.h  Instruction.cc  Instruction.h  Tensor.cc  Tensor.h
mlvm/Local/: CMakeLists.txt  Data.cpp  Data.h  DataTest.cpp
mlvm/Op/: CMakeLists.txt  EinsumTest.cc
mlvm/Random/: SplittableTest.cc
mlvm/Runtime/: CMakeLists.txt  Evaluator.cc  Evaluator.h
mlvm/array/: array+new.go  array.go  array_new.go  array_string.go  array_test.go  shape+new.go  shape.go
mlvm/array_go/: array+new.go  shape.go  shape_test.go
mlvm/container/: list.h
mlvm/ir/: CMakeLists.txt  context.c  context.h  context_test.c  error.h  function.c  function.h  instruction.c  ir.h  macros.h  operand.c  tensor.c  tensor.h
mlvm/lib/: CMakeLists.txt  README.md  lib_test.h  list.c  list.h  list_test.c  test_suite.h
mlvm/random/: CMakeLists.txt  normal.c  normal.h  normal_test.c  random.h  random_test.h  sprng.h  sprng64.c  sprng64.h
mlvm/runtime/: kernel.h
mlvm/sprng/: CMakeLists.txt  normal.c  normal.h  normal_test.c  sprng.h  sprng64.c  sprng_api.h  sprng_interface.h  sprng_test.h  test_suite.h
mlvm/test/: Test.cmake
mlvm/testing/: test.c  test.h
src/: Makefile  error.h  lib.rs  main.c  main.rs  mlvm.h  op.c  op.h  op_test.c  opcode.c  opcode.h  opcode_test.c  primitives.c  primitives.h  primitives_blis.h  program.c  program.h  sds.c  sds.h  sds_test.c  shape.c  shape_test.c  tensor.c  tensor_test.c  test.c  test.h  vec.c  vec.h  vec_test.c  vm.c  vm.h  vm_internal.h  vm_test.c
src/base/: mod.rs
src/server/: server.h
src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/testing/: testing.h
src/vm/: object.c  object.h  object_test.c  op_test.c  opcode.c  opcode.h  opcode_test.c  opdefs.h  primitives.h  program.h  shape_test.c  stack.c  stack.h  tensor.c  tensor.h  tensor_test.c  vm.c  vm.h  vm_internal.h  vm_test.c
tests/: README.md  expr_single_literal_test.go  expr_tensor_store_load_test.go  single_expr_test.go  tensor_store_load_test.go
tools/: immutable_slice_gen.go
vm/code/: opcode.go  opcode_test.go  program.go
vm/mach/: README.md  handle.go  tape.go  vm.go  vm_examples_test.go  vm_helper.go  vm_run.go  vm_test.go
vm/nn/: api.go  rng.go
vm/object/: builtin.go  object.go  tensor.go  tensor_test.go
vm/ops/: opcode.go  option.go
vm/vm/: vm.go  vm_examples_test.go  vm_helper.go  vm_run.go
(+304 files in other folders)
